--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -13,6 +13,7 @@
     - docker-compose
     - github-cli
     - celluloid
+    - visual-studio-code-bin
 
 - name: enable docker service
   service:
